@@ -3,7 +3,10 @@
 	  at once (-abcde)
 	* conf.c: removed support for the old configuration syntax
 	* list_window.[c.h]: added LW_HIDE_CURSOR_FLAG
-	* screen_help.c: hide cursor on the help screen
+	* screen_help.c: hide cursor on the help screen, removed build info
+	* configure.ac: added --disable-raw-mode
+	* Added support for SIGSTOP, SIGCONT in raw mode
+	* Mouse support is now optional (enable-mouse)
 	
 2004-07-09  Kalle Wallin <kaw@linux.se>
 	* ncmpc-0.11.0 released (r1820)
